Enable centralized logging